--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,3 +12,16 @@
   height: 200px; /* ou outro valor desejado */
   object-fit: cover;
 }
+
+.c-news{
+  margin-top: 10rem;
+  background-color: rgba(255, 217, 0, 0.678);
+}
+
+.myNav{
+  background-color: rgb(255, 217, 0, 0.678);
+}
+
+.myFoot{
+  background-color: rgba(255, 217, 0, 0.603);
+}
